test/spec_vectors/simd_i32x4_cmp/fail/module_22.wat
(module (func $i32x4.le_u-1st-arg-empty (result v128) (i32x4.le_u (v128.const i32x4 0 0 0 0))))